# cuda_practices

./: .gitignore  README.md
ParallelPrefixSum/: CMakeLists.txt  Readme.md
ParallelPrefixSum/include/: prefix_sum.h
ParallelPrefixSum/src/: cpu_prefix_sum.c  main.cu  prefix_sum.cu
Physics_simulations/flow_simulation/: CMakeLists.txt  README.md
Physics_simulations/flow_simulation/include/: fluid_simulation.h  visualization.h
Physics_simulations/flow_simulation/src/: fluid_simulation.cu  main.cpp  visualization.cpp
Physics_simulations/fluid_dynamics/: CMakeLists.txt  Readme.md
Physics_simulations/fluid_dynamics/include/: fluid_sim.h
Physics_simulations/fluid_dynamics/scripts/: frame_visualizer.py  visualizer.py
Physics_simulations/fluid_dynamics/src/: fluid_sim.cu  main.cu
cuda_baics/: 01_idx.cu  grid_block_thread.cu  memory_practices.cu
cuda_image_processing/FFTImageFiltering/: CMakeLists.txt  README.md
cuda_image_processing/FFTImageFiltering/include/: fft_filter.hpp
cuda_image_processing/FFTImageFiltering/src/: fft_cuda_utility.cu  fft_filter.cpp  main.cpp
cuda_image_processing/gaussianFilter/: CMakeLists.txt
cuda_image_processing/gaussianFilter/include/: gaussian_filter.h
cuda_image_processing/gaussianFilter/src/: gaussian_filter.cu  main.cpp
cuda_robotic_questions/add_matrix_project/: README.md  add_matrix.cu
cuda_robotic_questions/occupancy_cuda_process/: cuda_occupancy_grid_process.cu
cuda_robotic_questions/occupancy_grid/: README.md
cuda_robotic_questions/occupancy_grid/include/: occupancy_grid_processor.h
cuda_robotic_questions/occupancy_grid/src/: main.cpp  occupancy_grid_processor.cu
cuda_robotic_questions/voxelFilter/: CMakeLists.txt  README.md
cuda_robotic_questions/voxelFilter/data/: filtered_sample_cpu.pcd
cuda_robotic_questions/voxelFilter/include/: voxel_filter.h  voxel_filter_cpu.h
cuda_robotic_questions/voxelFilter/src/: main.cpp  voxel_filter.cu  voxel_filter_cpu.cpp
occupancy_grid/: CMakeLists.txt
